# kiro.rs

./: Cargo.toml  Dockerfile
.github/workflows/: build.yaml  docker-build.yaml
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: batch-import-dialog.tsx  credential-card.tsx  dashboard.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/types/: api.ts
src/: main.rs
src/admin/: handlers.rs  middleware.rs  mod.rs  router.rs  service.rs  types.rs
src/anthropic/: handlers.rs  stream.rs  types.rs  websearch.rs
src/kiro/: provider.rs  token_manager.rs
